--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.18.3",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
+    "lodash": "^4.17.21",
     "mongoose": "^6.7.0",
     "nodemon": "^2.0.20"
   }
