--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "author": "",
   "license": "ISC",
+  "engines": {
+    "node": "16.8.0" },
   "dependencies": {
     "body-parser": "^1.18.3",
     "ejs": "^2.6.1",
