--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "author": "",
   "license": "ISC",
   "engines": {
-    "node": "16.8.0" },
+    "node": "16.8.0"
+  },
   "dependencies": {
     "body-parser": "^1.18.3",
+    "dotenv": "^16.0.3",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "lodash": "^4.17.21",
